objects/report_sender__DashboardView__c.object
<CustomObject>
    <fields>
        <fullName>report_sender__ChartUrl__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ChartUrl</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>report_sender__Columns__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Columns</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__DashboardId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DashboardId</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Dshboard_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dshboard_Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Email_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email Data</label>
        <referenceTo>report_sender__Email_Data__c</referenceTo>
        <relationshipLabel>DashboardView</relationshipLabel>
        <relationshipName>DashboardView</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>report_sender__ReportId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ReportId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Unique_Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DashboardView</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Dashboard_View</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DashboardViews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>